implement data to chart